Favicon fix + Coffee section mobile RWD fix

--- a/src/components/Coffee/styles.scss
+++ b/src/components/Coffee/styles.scss
@@ -1,7 +1,7 @@
 @import '../../utils/media.scss';
 
 .Coffee {
-    height: 76rem;
+    height: 70rem;
     background: url('https://images.unsplash.com/photo-1517160234992-eb26e543128e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80') no-repeat center 0% fixed;
     background-size: cover;
     margin-bottom: 3rem;
@@ -17,10 +17,10 @@
 
         &__content {
             width: 86vw;
-            height: 90%;
+            height: 95%;
             background-color: rgba(255, 255, 255, 0.45);
             display: grid;
-            padding: 1.5rem 1rem;
+            padding: 2rem 1rem;
 
             & h2 {
                 color: white;
@@ -32,7 +32,7 @@
 
             & hr {
                 background-color: rgba(232, 232, 232, 0.6);
-                margin: 1.5rem 0;
+                margin: 1rem 0;
 
                 @media (min-width: $tablet) {
                     margin: 1rem auto;
@@ -40,17 +40,20 @@
             }
 
             @media (min-width: $mobileM) {
-                padding: 3rem 1rem;
+                padding: 3rem 2rem;
+                height: 95%;
             }
 
             @media (min-width: $mobileL) {
                 height: 90%;
             }
-            @media (min-width: $mobileHorizontal) {
-                height: 80%;
+
+            @media (min-width: 562px) {
+                height: 85%;
             }
 
             @media (min-width: $tablet) {
+                height: 80%;
                 width: 75vw;
                 padding: 1.5rem;
             }
@@ -66,7 +69,7 @@
         height: 66rem;
     }
 
-    @media (min-width: $mobileHorizontal) {
+    @media (min-width: 562px) {
         height: 50rem;
     }
 
