--- a/src/components/Eco/styles.scss
+++ b/src/components/Eco/styles.scss
@@ -16,7 +16,7 @@
         width: inherit;
         display: grid;
         align-items: center;
-        padding: 0 1rem;
+        padding: .5rem 1rem;
         grid-template-columns: 1fr;
         grid-template-rows: repeat(3, auto);
         grid-template-areas:
